Replace `Set.of` call